[workspace]
members = [
    ".imag-documentation",
    "bin/core/imag/",
    "bin/domain/imag-bookmark",
    "bin/domain/imag-counter",
    "bin/domain/imag-diary",
    "bin/domain/imag-link",
    "bin/domain/imag-mail",
    "bin/domain/imag-notes",
    "bin/domain/imag-ref",
    "bin/domain/imag-store",
    "bin/domain/imag-tag",
    "bin/domain/imag-timetrack",
    "bin/domain/imag-todo",
    "bin/domain/imag-view",
    "lib/core/libimagerror",
    "lib/core/libimagrt",
    "lib/core/libimagstore",
    "lib/domain/libimagannotation",
    "lib/domain/libimagbookmark",
    "lib/domain/libimagcounter",
    "lib/domain/libimagdiary",
    "lib/domain/libimagmail",
    "lib/domain/libimagnotes",
    "lib/domain/libimagref",
    "lib/domain/libimagtodo",
    "lib/entry/libimagentrycategory",
    "lib/entry/libimagentrydatetime",
    "lib/entry/libimagentryedit",
    "lib/entry/libimagentryfilter",
    "lib/entry/libimagentrylink",
    "lib/entry/libimagentrylist",
    "lib/entry/libimagentrymarkdown",
    "lib/entry/libimagentrytag",
    "lib/entry/libimagentrytimetrack",
    "lib/entry/libimagentryview",
    "lib/etc/libimaginteraction",
    "lib/etc/libimagtimeui",
    "lib/etc/libimagutil",
]
