[package]
name = "imag-documentation"
version = "0.3.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Documentation crate of the imag distribution. Does not contain functionality"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]

[dependencies.libimagannotation]
path = "../libimagannotation"

[dependencies.libimagbookmark]
path = "../../../lib/domain/libimagbookmark"

[dependencies.libimagcounter]
path = "../../../lib/domain/libimagcounter"

[dependencies.libimagdiary]
path = "../../../lib/domain/libimagdiary"

[dependencies.libimagentrycategory]
path = "../libimagentrycategory"

[dependencies.libimagentrydatetime]
path = "../libimagentrydatetime"

[dependencies.libimagentryedit]
path = "../libimagentryedit"

[dependencies.libimagentryfilter]
path = "../../../lib/entry/libimagentryfilter"

[dependencies.libimagentrylink]
path = "../../../lib/entry/libimagentrylink"

[dependencies.libimagentrylist]
path = "../../../lib/entry/libimagentrylist"

[dependencies.libimagentrymarkdown]
path = "../../../lib/entry/libimagentrymarkdown"

[dependencies.libimagentrytag]
path = "../../../lib/entry/libimagentrytag"

[dependencies.libimagentrytimetrack]
path = "../libimagentrytimetrack"

[dependencies.libimagentryview]
path = "../../../lib/entry/libimagentryview"

[dependencies.libimagerror]
path = "../../../lib/core/libimagerror"

[dependencies.libimaginteraction]
path = "../../../lib/etc/libimaginteraction"

[dependencies.libimagmail]
path = "../libimagmail"

[dependencies.libimagnotes]
path = "../../../lib/domain/libimagnotes"

[dependencies.libimagref]
path = "../../../lib/entry/libimagentryref"

[dependencies.libimagrt]
path = "../../../lib/core/libimagrt"

[dependencies.libimagstore]
path = "../../../lib/core/libimagstore"

[dependencies.libimagtimeui]
path = "../../../lib/etc/libimagtimeui"

[dependencies.libimagtodo]
path = "../libimagtodo"

[dependencies.libimagutil]
path = "../../../lib/etc/libimagutil"

