[package]
name = "libimagdiary"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

documentation = "https://matthiasbeyer.github.io/imag/imag_documentation/index.html"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[dependencies]
chrono = "0.4"
log = "0.3"
semver = "0.5"
toml = "0.4.*"
toml-query = "0.3.*"
regex = "0.1"
itertools = "0.5"

[dependencies.libimagstore]
path = "../../../lib/core/libimagstore"

[dependencies.libimagerror]
path = "../../../lib/core/libimagerror"

[dependencies.libimagrt]
path = "../../../lib/core/libimagrt"

[dependencies.libimagutil]
path = "../../../lib/etc/libimagutil"

[dependencies.libimagentryedit]
path = "../../../lib/entry/libimagentryedit"

[dependencies.libimagentryview]
path = "../../../lib/entry/libimagentryview"

