[package]
name = "libimagannotation"
version = "0.4.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../README.md"
license     = "LGPL-2.1"

[dependencies]
uuid = { version = "0.3.1", features = ["v4"] }
lazy_static = "0.1.15"
toml = "^0.4"

[dependencies.libimagstore]
path = "../../../lib/core/libimagstore"

[dependencies.libimagerror]
path = "../../../lib/core/libimagerror"

[dependencies.libimagnotes]
path = "../../../lib/domain/libimagnotes"

[dependencies.libimagentrylink]
path = "../../../lib/entry/libimagentrylink"

[dependencies.libimagutil]
path = "../../../lib/etc/libimagutil"

